# wandb-sklearn-integration

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: example_classification.py  example_gridsearch.py  example_regression.py
integration/sklearn/: __init__.py  autologging_utils.py  utils.py
src/integration/: __init__.py
src/integration/sklearn/: __init__.py  utils.py
src/wandb_sklearn_integration/: __init__.py
src/wandb_sklearn_integration/sklearn/: __init__.py  utils.py
