[metadata]
name = wandb_sklearn_integration
version = 0.0.1
author = Bharat Ramanathan
author_email = param.bharat@gmail.com
description = An auto logging integration for scikit-learn using Weight and Biases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/parambharat/wandb-sklearn-integration
project_urls =
    Bug Tracker = https://github.com/parambharat/wandb-sklearn-integration/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    joblib==1.1.0
    matplotlib==3.5.2
    wandb==0.13.4
    numpy==1.21.6
    packaging==21.3
    pandas==1.4.4
    scikit-learn==1.0.2