[metadata]
name = wandb_sklearn_integration
version = 0.0.1
author = Bharat Ramanathan
author_email = param.bharat@gmail.com
description = An auto logging integration for scikit-learn using Weight and Biases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/parambharat/wandb-sklearn-integration
project_urls =
    Bug Tracker = https://github.com/parambharat/wandb-sklearn-integration/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages=find:
python_requires = >=3.6
install_requires =
    joblib
    matplotlib
    wandb
    numpy
    packaging
    pandas
    scikit-learn

[options.packages.find]
where=src